==> llnbn/allanSE/blinkyInterrupt/src/platform/tm4c123/InterruptHandler.cpp <==
#include "inc/InterruptHandler.hpp"

void InterruptHandler::setInterruptHandler(GpioIn& gpio)
{
  /* Get the GPIO port and pin */
  uint32_t port = gpio.getGpioConfig().port;
  uint8_t pin   = gpio.getGpioConfig().pin;

  /* Select the pin number */
  if (pin == GPIO_PIN_0) 	  pin = 0;
  else if (pin == GPIO_PIN_1) pin = 1;
  else if (pin == GPIO_PIN_2) pin = 2;
  else if (pin == GPIO_PIN_3) pin = 3;
  else if (pin == GPIO_PIN_4) pin = 4;
  else if (pin == GPIO_PIN_5) pin = 5;
  else if (pin == GPIO_PIN_6) pin = 6;
  else if (pin == GPIO_PIN_7) pin = 7;

  /* Store a pointer to the GPIO object in the interrupt vector */
  if (port == GPIO_PORTA_BASE) {
	IntPrioritySet(INT_GPIOA, 0xE0); //menor nível de prioridade (0 é o maior)
	GPIOA_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTB_BASE) {
	IntPrioritySet(INT_GPIOB, 0xE0);
	GPIOB_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTC_BASE) {
	IntPrioritySet(INT_GPIOC, 0xE0);
	GPIOC_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTD_BASE) {
	IntPrioritySet(INT_GPIOD, 0xE0);
	GPIOD_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTE_BASE) {
	IntPrioritySet(INT_GPIOE, 0xE0);
	GPIOE_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTF_BASE){
	IntPrioritySet(INT_GPIOF, 0xE0);
	GPIOF_interruptVector_[pin] = &gpio;
  }
}

void InterruptHandler::clearInterruptHandler(GpioIn& gpio)
{
  /* Get the GPIO port and pin */
  uint32_t port = gpio.getGpioConfig().port;
  uint8_t pin   = gpio.getGpioConfig().pin;

  /* Select the pin number */
  if (pin == GPIO_PIN_0) 	  pin = 0;
  else if (pin == GPIO_PIN_1) pin = 1;
  else if (pin == GPIO_PIN_2) pin = 2;
  else if (pin == GPIO_PIN_3) pin = 3;
  else if (pin == GPIO_PIN_4) pin = 4;
  else if (pin == GPIO_PIN_5) pin = 5;
  else if (pin == GPIO_PIN_6) pin = 6;
  else if (pin == GPIO_PIN_7) pin = 7;

  /* Remove the pointer to the GPIO object in the interrupt vector */
  if (port == GPIO_PORTA_BASE) GPIOA_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTB_BASE) GPIOB_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTC_BASE) GPIOC_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTD_BASE) GPIOD_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTE_BASE) GPIOE_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTF_BASE) GPIOF_interruptVector_[pin] = nullptr;

}

void InterruptHandler::setInterruptHandler(Timer& timer_) {
  /* Get the TIMER base */
  uint32_t base = timer_.getConfig().base;
  uint32_t source = timer_.getConfig().source;

  if (base == TIMER0_BASE) {
	  if ( (source == TIMER_A) || (source == TIMER_BOTH) ) TIMER0_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER0_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER1_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER1_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER1_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER2_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER2_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER2_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER3_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER3_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER3_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER4_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER4_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER4_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER5_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER5_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER5_interruptVector_[1] = &timer_;
  }
}

void InterruptHandler::clearInterruptHandler(Timer& timer_)
{
  /* Get the TIMER base */
  uint32_t base = timer_.getConfig().base;
  uint32_t source = timer_.getConfig().source;

  if (base == TIMER0_BASE) {
	  if ( (source == TIMER_A) || (source == TIMER_BOTH)) TIMER0_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER0_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER1_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER1_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER1_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER2_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER2_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER2_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER3_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER3_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER3_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER4_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER4_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER4_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER5_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER5_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER5_interruptVector_[1] = nullptr;
  }
}

void InterruptHandler::GPIO_InterruptHandler(uint32_t base, GpioIn* vector[8]) {

  /* Read the GPIO interrupt status */
  uint32_t status = GPIOIntStatus(base, true);

  /* Clear the GPIO interrupt status */
  GPIOIntClear(base, status);

  /* Call all the GPIO interrupt handlers */
  /*obs: é possível que mais de um pino tenha gerado interrupção nessa porta. As ISRs são executadas na ordem dos pinos (0 -- 7) */
  if ((status & GPIO_PIN_0) && (vector[0] != nullptr)) vector[0]->interruptHandler(); 
  if ((status & GPIO_PIN_1) && (vector[1] != nullptr)) vector[1]->interruptHandler(); 
  if ((status & GPIO_PIN_2) && (vector[2] != nullptr)) vector[2]->interruptHandler(); 
  if ((status & GPIO_PIN_3) && (vector[3] != nullptr)) vector[3]->interruptHandler(); 
  if ((status & GPIO_PIN_4) && (vector[4] != nullptr)) vector[4]->interruptHandler();
  if ((status & GPIO_PIN_5) && (vector[5] != nullptr)) vector[5]->interruptHandler();
  if ((status & GPIO_PIN_6) && (vector[6] != nullptr)) vector[6]->interruptHandler();
  if ((status & GPIO_PIN_7) && (vector[7] != nullptr)) vector[7]->interruptHandler();
  
}

void InterruptHandler::TIMER_InterruptHandler(uint32_t base, Timer* vector[2]) {
	uint32_t status;

	status = TimerIntStatus(base, true);
	TimerIntClear(base, status);

	if (base == TIMER0_BASE) {
		if ((TIMER0_interruptVector_[0] != nullptr) && \
			((status & TIMER_TIMA_MATCH) || \
			(status & TIMER_CAPA_EVENT) || \
			(status & TIMER_TIMA_TIMEOUT) || \
			(status & TIMER_CAPA_MATCH)))
		{
			TIMER0_interruptVector_[0]->interruptHandler();
		}

		if ((TIMER0_interruptVector_[1] != nullptr) && \
			((status & TIMER_TIMB_MATCH) || \
			(status & TIMER_CAPB_EVENT) || \
			(status & TIMER_TIMB_TIMEOUT) || \
			(status & TIMER_CAPB_MATCH)))
		{
			TIMER0_interruptVector_[1]->interruptHandler();
		}
	}

	if (base == TIMER1_BASE) {
		if ((TIMER1_interruptVector_[0] != nullptr) && \
			((status & TIMER_TIMA_MATCH) || \
			(status & TIMER_CAPA_EVENT) || \
			(status & TIMER_TIMA_TIMEOUT) || \
			(status & TIMER_CAPA_MATCH)))
		{
			TIMER1_interruptVector_[0]->interruptHandler();
		}

		if ((TIMER1_interruptVector_[1] != nullptr) && \
			((status & TIMER_TIMB_MATCH) || \
			(status & TIMER_CAPB_EVENT) || \
			(status & TIMER_TIMB_TIMEOUT) || \
			(status & TIMER_CAPB_MATCH)))
		{
			TIMER1_interruptVector_[1]->interruptHandler();
		}
	}

	if (base == TIMER2_BASE) {
		if ((TIMER2_interruptVector_[0] != nullptr) && \
			((status & TIMER_TIMA_MATCH) || \
			(status & TIMER_CAPA_EVENT) || \
			(status & TIMER_TIMA_TIMEOUT) || \
			(status & TIMER_CAPA_MATCH)))
		{
			TIMER2_interruptVector_[0]->interruptHandler();
		}

		if ((TIMER2_interruptVector_[1] != nullptr) && \
			((status & TIMER_TIMB_MATCH) || \
			(status & TIMER_CAPB_EVENT) || \
			(status & TIMER_TIMB_TIMEOUT) || \
			(status & TIMER_CAPB_MATCH)))
		{
			TIMER2_interruptVector_[1]->interruptHandler();
		}
	}

	if (base == TIMER3_BASE) {
		if ((TIMER3_interruptVector_[0] != nullptr) && \
			((status & TIMER_TIMA_MATCH) || \
			(status & TIMER_CAPA_EVENT) || \
			(status & TIMER_TIMA_TIMEOUT) || \
			(status & TIMER_CAPA_MATCH)))
		{
			TIMER3_interruptVector_[0]->interruptHandler();
		}

		if ((TIMER3_interruptVector_[1] != nullptr) && \
			((status & TIMER_TIMB_MATCH) || \
			(status & TIMER_CAPB_EVENT) || \
			(status & TIMER_TIMB_TIMEOUT) || \
			(status & TIMER_CAPB_MATCH)))
		{
			TIMER3_interruptVector_[1]->interruptHandler();
		}
	}

	if (base == TIMER4_BASE) {
		if ((TIMER4_interruptVector_[0] != nullptr) && \
			((status & TIMER_TIMA_MATCH) || \
			(status & TIMER_CAPA_EVENT) || \
			(status & TIMER_TIMA_TIMEOUT) || \
			(status & TIMER_CAPA_MATCH)))
		{
			TIMER4_interruptVector_[0]->interruptHandler();
		}

		if ((TIMER4_interruptVector_[1] != nullptr) && \
			((status & TIMER_TIMB_MATCH) || \
			(status & TIMER_CAPB_EVENT) || \
			(status & TIMER_TIMB_TIMEOUT) || \
			(status & TIMER_CAPB_MATCH)))
		{
			TIMER4_interruptVector_[1]->interruptHandler();
		}
	}

	if (base == TIMER5_BASE) {
		if ((TIMER5_interruptVector_[0] != nullptr) && \
			((status & TIMER_TIMA_MATCH) || \
			(status & TIMER_CAPA_EVENT) || \
			(status & TIMER_TIMA_TIMEOUT) || \
			(status & TIMER_CAPA_MATCH)))
		{
			TIMER5_interruptVector_[0]->interruptHandler();
		}

		if ((TIMER5_interruptVector_[1] != nullptr) && \
			((status & TIMER_TIMB_MATCH) || \
			(status & TIMER_CAPB_EVENT) || \
			(status & TIMER_TIMB_TIMEOUT) || \
			(status & TIMER_CAPB_MATCH)))
		{
			TIMER5_interruptVector_[1]->interruptHandler();
		}
	}
}
